--- a/CSV/Language/English/Place/MorugenPrison.txt
+++ b/CSV/Language/English/Place/MorugenPrison.txt
@@ -28,13 +28,13 @@ Place/MorugenPrison,
 こんにちは。無敗のルーキーさん。\nいまヤツメさんは休憩時間中です。,
 わたしはまだ補助の仕事ですが、\n休憩中の見張りぐらいはつとまります。,
 ヤツメさんにあなたのことは聞いています。\n面会もご自由にどうぞ。,
-うう、ここから出してよぉ～。おなかすいたよ～。,
-あっ！キミはわたしを倒した男の子じゃん！\nもー、キミのせいだよ。\nこんなじめじめしたところに閉じ込められてさぁ。,
-エナジーも全然吸えないし、わたし死んじゃいそうだよ～。\nわぁーん。,
-ねぇー、あなたってやさしい正義のカードマスターなんだよね？\nだったら、おねがーい❤\nわたしにちょっとだけエナジーをわけてほしいなぁ～❤,
-かわいそうな女の子を助けると思ってさ。ほら、チラ❤,
-（うっ・・・❤）,
-これオカズにしていいからさぁ❤\nねえ我慢汁だけでもいいの。おちんちんシコシコして、\nわたしに少しだけエナジーちょうだぁい❤,
+うう、ここから出してよぉ～。おなかすいたよ～。,Uuuh... Let me out. I'm so hungry...
+あっ！キミはわたしを倒した男の子じゃん！\nもー、キミのせいだよ。\nこんなじめじめしたところに閉じ込められてさぁ。,Ah! Aren't you the guy who defeated me? Geez! This is all your fault. I'm all locked up because of you.
+エナジーも全然吸えないし、わたし死んじゃいそうだよ～。\nわぁーん。,I'm about to die here since I'm not getting to drain any energy... Uaaaah...
+ねぇー、あなたってやさしい正義のカードマスターなんだよね？\nだったら、おねがーい❤\nわたしにちょっとだけエナジーをわけてほしいなぁ～❤,Hey; you're a gentle and righteous cardmaster; right? Then; can you listen to my request? I'd like you to give me a little bit of energy.❤
+かわいそうな女の子を助けると思ってさ。ほら、チラ❤,You can think of it as helping out a cute girl. Let me give you a peek too.❤
+（うっ・・・❤）,(Uuuh...❤)
+これオカズにしていいからさぁ❤\nねえ我慢汁だけでもいいの。おちんちんシコシコして、\nわたしに少しだけエナジーちょうだぁい❤,You can use my breasts as fap material.❤ Please; I'm even fine with just the precum. Just stroke your dick and give me a little bit of your energy.❤
 ・・・。なに？\nわたしのこと笑いに来たの？\nおなかすいててもなにもくれない、きみのことなんて知らなーい。,
 わたしと戦ったときも、\n気持ちいいのを我慢できちゃうぐらいまじめだもんねー。\nこんな胸チラぐらいじゃ、どうにもならないもんなー。,
 ほら、見る？どうせ効かないだろうけど。\nチラ❤,
@@ -42,14 +42,14 @@ Place/MorugenPrison,
 優しい正義のマスターさぁん❤\nおねがーい❤かわいそうな女の子を助けてぇ❤\nあーん❤,
 谷間に見とれてしまった,
 彼女のいる牢屋から離れた,
-あ、ちょっと待ってよ。\nむぅ・・・。行っちゃった。,
-（うう・・・❤こんなところで、だめなのに・・・❤）,
-（ああ、目が離せない・・・❤）,
-（くす❤おちんちんに手が伸び始めた❤ちょっろーい❤）,
-おい、なにをやっている。,
-・・・・！,
-牢屋に密着するほど近づいて\nいささか不審だったぞ。無敗のルーキー。,
-お前ほどの強者が、いまさら下級サキュバスにたぶらかされるとは思わんが、\n相手は魔族だ。油断しないように気を引き締めろ。,
+あ、ちょっと待ってよ。\nむぅ・・・。行っちゃった。,Ah! No; please wait! Geez... He already left.
+（うう・・・❤こんなところで、だめなのに・・・❤）,(Uuuh...❤ I shouldn't be doing this in prison; but... )
+（ああ、目が離せない・・・❤）,(Aaah...❤ I can't stop looking at her breasts...❤)
+（くす❤おちんちんに手が伸び始めた❤ちょっろーい❤）,(Ahaha.❤ His hand is moving to his dick.❤ That was so easy.❤)
+おい、なにをやっている。,Hey! What are you doing doing over there?
+・・・・！,...!
+牢屋に密着するほど近づいて\nいささか不審だったぞ。無敗のルーキー。,Undefeated Rookie; it's suspicious if you're standing so close to the bars.
+お前ほどの強者が、いまさら下級サキュバスにたぶらかされるとは思わんが、\n相手は魔族だ。油断しないように気を引き締めろ。,I doubt that someone strong as you would get tricked by a succubus; but remember that she's still a demon. You shou
 ヤツメさんは僕に注意すると、この場を離れて行った。,
 ちぇ・・・。余計な邪魔が入っちゃった。\nやっぱりあいつがいるときは無理っぽいなぁー。,
 ねえ、また来てよ。\nあのヤツメってマスター、たまに休憩に入るからさ、\n今度はあいつがいないときに来て。,
