--- a/CSV/Language/English/Place/MorugenPrison.txt
+++ b/CSV/Language/English/Place/MorugenPrison.txt
@@ -28,80 +28,80 @@ Place/MorugenPrison,
 こんにちは。無敗のルーキーさん。\nいまヤツメさんは休憩時間中です。,
 わたしはまだ補助の仕事ですが、\n休憩中の見張りぐらいはつとまります。,
 ヤツメさんにあなたのことは聞いています。\n面会もご自由にどうぞ。,
-うう、ここから出してよぉ～。おなかすいたよ～。,Uuuh... Let me out. I'm so hungry...
+うう、ここから出してよぉ～。おなかすいたよ～。,Uuuh... Let me out～. I'm hungry～.
 あっ！キミはわたしを倒した男の子じゃん！\nもー、キミのせいだよ。\nこんなじめじめしたところに閉じ込められてさぁ。,Ah! Aren't you the guy who defeated me? Geez! This is all your fault. I'm all locked up because of you.
-エナジーも全然吸えないし、わたし死んじゃいそうだよ～。\nわぁーん。,I'm about to die here since I'm not getting to drain any energy... Uaaaah...
-ねぇー、あなたってやさしい正義のカードマスターなんだよね？\nだったら、おねがーい❤\nわたしにちょっとだけエナジーをわけてほしいなぁ～❤,Hey; you're a gentle and righteous cardmaster; right? Then; can you listen to my request? I'd like you to give me a little bit of energy.❤
+エナジーも全然吸えないし、わたし死んじゃいそうだよ～。\nわぁーん。,I haven't got to drain any energy; so I'm about to die～. Aaaah～.
+ねぇー、あなたってやさしい正義のカードマスターなんだよね？\nだったら、おねがーい❤\nわたしにちょっとだけエナジーをわけてほしいなぁ～❤,Hey; you're a gentle and righteous cardmaster; aren't you? Then; could you listen to my request? I'd like you to share me a little bit of energy.❤
 かわいそうな女の子を助けると思ってさ。ほら、チラ❤,You can think of it as helping out a cute girl. Let me give you a peek too.❤
 （うっ・・・❤）,(Uuuh...❤)
-これオカズにしていいからさぁ❤\nねえ我慢汁だけでもいいの。おちんちんシコシコして、\nわたしに少しだけエナジーちょうだぁい❤,You can use my breasts as fap material.❤ Please; I'm even fine with just the precum. Just stroke your dick and give me a little bit of your energy.❤
-・・・。なに？\nわたしのこと笑いに来たの？\nおなかすいててもなにもくれない、きみのことなんて知らなーい。,
-わたしと戦ったときも、\n気持ちいいのを我慢できちゃうぐらいまじめだもんねー。\nこんな胸チラぐらいじゃ、どうにもならないもんなー。,
-ほら、見る？どうせ効かないだろうけど。\nチラ❤,
-その目を見る限り、興味ないわけじゃなさそうだけどなー❤\n服をぴらぴらってして谷間を出したり戻したりしたら、\n視線がちらちら動いてるし。くすくす❤,
-優しい正義のマスターさぁん❤\nおねがーい❤かわいそうな女の子を助けてぇ❤\nあーん❤,
-谷間に見とれてしまった,
-彼女のいる牢屋から離れた,
+これオカズにしていいからさぁ❤\nねえ我慢汁だけでもいいの。おちんちんシコシコして、\nわたしに少しだけエナジーちょうだぁい❤,I'll let you use this as fap material.❤ Please; I'm even fine with just the precum. Stroke your dick and give me a little bit of your energy.❤
+・・・。なに？\nわたしのこと笑いに来たの？\nおなかすいててもなにもくれない、きみのことなんて知らなーい。,...What? Did you come to laugh at me? I'm not getting fed anything; so I'm starving here. I won't do anything to you.
+わたしと戦ったときも、\n気持ちいいのを我慢できちゃうぐらいまじめだもんねー。\nこんな胸チラぐらいじゃ、どうにもならないもんなー。,You are so serious that you didn't you didn't bat an eyelid when I tried to make you feel good when we fought. You won't even flinch if I give you a peek of my cleavage like this; right?
+ほら、見る？どうせ効かないだろうけど。\nチラ❤,Just look. It's not going to work anyway; right? *Pull*
+その目を見る限り、興味ないわけじゃなさそうだけどなー❤\n服をぴらぴらってして谷間を出したり戻したりしたら、\n視線がちらちら動いてるし。くすくす❤,You might not look like you're interested; but when I keep pulling my dress up and down; your gaze following it.❤ Ehehehe.❤
+優しい正義のマスターさぁん❤\nおねがーい❤かわいそうな女の子を助けてぇ❤\nあーん❤,Please; Mr. Gentle and rigtheous Cardmaster.❤ Please help a poor girl out.❤ Aaaah.❤
+谷間に見とれてしまった,Keep looking at her cleavage
+彼女のいる牢屋から離れた,Step back from her cell
 あ、ちょっと待ってよ。\nむぅ・・・。行っちゃった。,Ah! No; please wait! Geez... He already left.
-（うう・・・❤こんなところで、だめなのに・・・❤）,(Uuuh...❤ I shouldn't be doing this in prison; but... )
-（ああ、目が離せない・・・❤）,(Aaah...❤ I can't stop looking at her breasts...❤)
+（うう・・・❤こんなところで、だめなのに・・・❤）,(Uuuh...❤ I shouldn't be do this in prison; but... )
+（ああ、目が離せない・・・❤）,(Aaah...❤ I can't take my eyes away from her breasts...❤)
 （くす❤おちんちんに手が伸び始めた❤ちょっろーい❤）,(Ahaha.❤ His hand is moving to his dick.❤ That was so easy.❤)
-おい、なにをやっている。,Hey! What are you doing doing over there?
+おい、なにをやっている。,Hey! What are you doing doing?
 ・・・・！,...!
-牢屋に密着するほど近づいて\nいささか不審だったぞ。無敗のルーキー。,Undefeated Rookie; it's suspicious if you're standing so close to the bars.
-お前ほどの強者が、いまさら下級サキュバスにたぶらかされるとは思わんが、\n相手は魔族だ。油断しないように気を引き締めろ。,I doubt that someone strong as you would get tricked by a succubus; but remember that she's still a demon. You shou
-ヤツメさんは僕に注意すると、この場を離れて行った。,
-ちぇ・・・。余計な邪魔が入っちゃった。\nやっぱりあいつがいるときは無理っぽいなぁー。,
-ねえ、また来てよ。\nあのヤツメってマスター、たまに休憩に入るからさ、\n今度はあいつがいないときに来て。,
-そうしてくれたら・・・。チラ❤,
-ここをオカズにしてシコシコさせてあげる❤\nわたしにエナジーめぐんでね❤\nやさしいカードマスターくん❤,
-くす❤早く気持ちよくなりたくて戻ってきちゃったのかな❤\nここに戻ってきても、今はおちんちんシコシコできないよ❤,
-あの邪魔な看守がいなくなるまでおあずけ❤\nその間、いっぱい精液ぐつぐつさせて、\nおいしいエナジーをつくっておいてねー❤,
-（あは、谷間ではぁはぁしてバカみたいな顔❤\n強いくせにこれだけで堕ちるとかちょろすぎでしょ❤\n魔力相当あるし、精液楽しみ～❤）,
-こんにちは。正義のマスターくん❤\nうふふ❤ちゃんと休憩時間に会いに来れて偉いねー❤,
-さっきあの女に取り上げられたこ・れ❤\n見たかったんでしょ？チラ❤,
-ううぅ・・・❤,
-あは、ハァハァしちゃって目がこわーい❤\nほら、もっと牢屋に近づいて。\nあっちの見張りのやつにばれないようにしないと。,
-おちんちん出してるところ、看守の子に見られたら恥ずかしいもんね❤\nバレずにシコシコできるように、そばまでおいで～❤,
-怖がらなくてもだいじょうぶだよ❤\nわたしは牢屋の中にいて、きみは外にいるんだから❤,
-サキュバスのエロい体を見ながらおちんちんシコシコしても、\nキミは安全❤\nすごいねー、ラッキーだねー、くすくす❤,
-わたしおなかすいて我慢できないから、\nほら、早く早くぅ❤\nおいしいエナジーちょうだぁい❤,
-（はううぅ❤こんなところで触るなんてダメなのに❤\nでもがまんできないっ❤）,
-あは、しこしこ気持ちよさそ～❤\n鉄格子に体がつきそうなぐらい近づいて、\nバレないようにシコシコシコ❤谷間をオカズにシコシコシコ❤,
-揺れてるおっぱいエロいもんね～❤\n一回倒したサキュバスだけど、\n本当はあのときもこうやって気持ちいいのに負けたかったんだよね～❤,
-その距離だと、わたしのいい匂いがするでしょ？\nサキュバスの体って牢屋にいても汚れないから、\nずぅーっと甘くていい匂いがするんだよ❤,
-おっぱい揺らして谷間から甘い匂いを飛ばしてあげる❤\n鼻をスンスンしながらシコシコしようね～❤\nきゃはは❤,
-あう、あああっ・・・❤❤,
-あはは❤しごくのすっごく早くなっちゃうね❤\nサキュバスフェロモンで肺をいっぱいにしながら、\nおちんちんシコシコシコシコ❤,
-もうイっちゃいそう？\nいいよ❤早くこの谷間に濃ゆーい精液ちょうだぁい❤\nめんどくさい看守が戻ってくる前に、出して、出して❤,
-サキュバスにエナジーお貢ぎ❤\nお腹空いてる女の子を助けてぇ❤\nほらカウントダウンしてあげる❤３、２、１、ぜーろ❤❤,
-あはぁん、おいしい～❤\nずーっとエナジーもらえてなかったから、\n最高の味がする～♪,
-キミからもっともっと精液吸いたいな～❤\nねぇー、キミが干からびちゃうまで吸ってもいい？\nおねがぁい❤,
-（うう、うう・・・❤僕はなにをしているんだろう・・・❤\nでも、もう一回吸ってほしい・・・❤きもちよくてぇ・・・❤）,
-（あは、またシコリ出した❤ほんとちょろ～い❤\nこのまま吸い殺しちゃってもいいし、\n死ぬ寸前で止めて奴隷にするのもいいな～❤ん？）,
-ちぇ、またあいつの足音だ。\nざんねんだけど、今日はこれでおしまいだね～❤,
-あう、ううう・・・❤,
-また別の休憩時間に来てよ。\nそのときはもう一回シコシコさせてあげる❤,
-わたしのおっぱいオカズにしたいでしょ？\nかわいそうなサキュバスに、たくさんご飯をめぐんであげようね❤\n正義のマスターくん❤くすくす❤,
-あは、早くわたしでシコシコしたいよねぇ❤\nでも残念、邪魔なやつがいるから今はできないんだぁ❤,
-キミは困ってる女の子を助けてるだけの正義のマスターなのにね、\nそれを邪魔をするなんて、看守のヤツメは悪いマスターだよね❤,
-あ～あ～、あいつを誰か倒してくれないかな～❤\nそうしたらキミは今すぐシコシコできるのに❤,
-わたしのおっぱい見ながらいっぱいシコシコ❤シコシコシコ❤\n気持ちいいだろうな～❤くすくす❤,
-(ま、今すぐ脱出しなくても、\nいずれこの街はぐちゃぐちゃになっちゃうんだけどね。\nそのときこのマスターくんも吸い殺しちゃおうっと♪),
-あは。また来てくれたんだ～❤\nわたしがお腹を空かせてるかもって気にしてくれたの？\nやさしい～❤さっすが正義のマスターくん❤,
-おちんちんからエナジー出しやすいように、\n今日もお手伝いしてあげるね～❤\nチラ❤,
-こんな風においしい精液いっぱいもらえるなら、\n別に牢屋から出なくてもいいかもねー。\n何もしなくてもごちそうがもらえるんだもん❤,
-優しくてバカなマスターくんが、\nいっぱい力の溶けた精液をせっせと貢ぎに来てくれるなんて❤\nあぁーん、わたしって超ラッキーかも❤,
-カードを１枚も使わずに、\nこうやっておっぱい揺らしてあげるだけで、エナジー食べ放題❤\nほらほらぁ、フェロモンすんすんしてシコっていいよ～❤,
-あはは❤しごくのすっごく早くなっちゃうね❤\n甘ぁい匂いで脳をまっしろにされながら、\nおちんちんをシコシコシコ❤シコシコシコ❤,
-頭おかしくなるぐらい気持ちよくて～、\nここが牢屋だとか、相手がサキュバスだとか何も考えられない❤\n精液出したくてそれで頭がいっぱい❤,
-もうイっちゃいそうなんでしょ❤いいよ❤\nこの谷間に濃ゆーい精液ちょうだぁい❤\nめんどくさい看守が戻ってくる前に、出して、出して❤,
-サキュバスにエナジーお貢ぎしようね❤\nほらカウントダウン❤３、２、１、ぜーろ❤❤\nイケ❤出せ❤きゃはは❤,
-あはぁん、おいしい～❤\n力がどろどろに溶けてて、すごくいい味❤,
-あうぅ、はへぇ・・・・❤❤,
-くすくす❤ふにゃふにゃにとろけた顔してる❤\nもうちょっとシャキッとしないと、看守にバレちゃうよ❤,
-それじゃまたね。あいつがすぐ戻ってくるし。\n今日はここまで。別の休憩時間に来たら、\nそのときはもう一回シコシコさせてあげる❤,
-サキュバスの体って何回オナニーしても飽きないでしょ？\nかわいそうなサキュバスに、たくさんご飯をめぐんであげようね❤\n正義のマスターくん❤くすくす❤,
+牢屋に密着するほど近づいて\nいささか不審だったぞ。無敗のルーキー。,Undefeated Rookie; it's suspicious if get too close to the prisoners.
+お前ほどの強者が、いまさら下級サキュバスにたぶらかされるとは思わんが、\n相手は魔族だ。油断しないように気を引き締めろ。,I doubt that someone strong as you would get tricked by a succubus; but remember that she's a demon. You should always remain cautious with them.
+ヤツメさんは僕に注意すると、この場を離れて行った。,Yatsume left after warning me.
+ちぇ・・・。余計な邪魔が入っちゃった。\nやっぱりあいつがいるときは無理っぽいなぁー。,Tch... That nuisance got in our way. It seems like we can't do it while she's here.
+ねえ、また来てよ。\nあのヤツメってマスター、たまに休憩に入るからさ、\n今度はあいつがいないときに来て。,Come see me again some other time. That Yatsume girl takes break at times; so you should aim to visit me then.
+そうしてくれたら・・・。チラ❤,And when you do... *Pull*
+ここをオカズにしてシコシコさせてあげる❤\nわたしにエナジーめぐんでね❤\nやさしいカードマスターくん❤,I'll let you fap to my breasts.❤ Please give me your energy then; Mr. Gentle Cardmaster.❤
+くす❤早く気持ちよくなりたくて戻ってきちゃったのかな❤\nここに戻ってきても、今はおちんちんシコシコできないよ❤,Ehehe.❤ Do you want to feel good really badly since you're visiting me so soon?❤ But it's no use. You can't stroke yourself with me yet.
+あの邪魔な看守がいなくなるまでおあずけ❤\nその間、いっぱい精液ぐつぐつさせて、\nおいしいエナジーをつくっておいてねー❤,We need to wait until that pesky jailer isn't here.❤ Please make sure to produce lots of delicious semen and energy until then.❤
+（あは、谷間ではぁはぁしてバカみたいな顔❤\n強いくせにこれだけで堕ちるとかちょろすぎでしょ❤\n魔力相当あるし、精液楽しみ～❤）,(Ahaha. He's already panting while staring at my cleavage with a silly face.❤ Despite him being strong; it was way too easy to tempt him.❤ His energy should be good too. I can't wait to taste his semen.❤)
+こんにちは。正義のマスターくん❤\nうふふ❤ちゃんと休憩時間に会いに来れて偉いねー❤,Good evening; Mr. Righteous Cardmaster.❤ Ehehe.❤ Thank you for coming to see me while that jailed is on a break.❤
+さっきあの女に取り上げられたこ・れ❤\n見たかったんでしょ？チラ❤,Since she stopped you from staring at my cleavage before.❤ You want to see it again; right? *Pull*
+ううぅ・・・❤,Uuuh...❤
+あは、ハァハァしちゃって目がこわーい❤\nほら、もっと牢屋に近づいて。\nあっちの見張りのやつにばれないようにしないと。,Ahaha. You're panting and looking at me with bloodshot eyes.❤ Now; come closer to my cell. You wouldn't like the other guard noticing what you're doing; right?
+おちんちん出してるところ、看守の子に見られたら恥ずかしいもんね❤\nバレずにシコシコできるように、そばまでおいで～❤,It would be shameful if he found you with your dick out.❤ You should move right against the bars so he won't notice you stroking off to me.❤
+怖がらなくてもだいじょうぶだよ❤\nわたしは牢屋の中にいて、きみは外にいるんだから❤,You don't need to be afraid of anything since I'm locked inside the cell; and you're outside of it.❤
+サキュバスのエロい体を見ながらおちんちんシコシコしても、\nキミは安全❤\nすごいねー、ラッキーだねー、くすくす❤,You're completely safe even if you stroke your dick while watching my erotic succubus body.❤ You've got such an amazing and lucky chance to do it.❤ Ehehehe.❤
+わたしおなかすいて我慢できないから、\nほら、早く早くぅ❤\nおいしいエナジーちょうだぁい❤,I'm so hungry that I can barely contain myself; so please hurry.❤ Give me your delicious semen.❤
+（はううぅ❤こんなところで触るなんてダメなのに❤\nでもがまんできないっ❤）,(Uuuuh.❤ I shouldn't touch myself in a place like this...❤ But I can't hold myself back.❤)
+あは、しこしこ気持ちよさそ～❤\n鉄格子に体がつきそうなぐらい近づいて、\nバレないようにシコシコシコ❤谷間をオカズにシコシコシコ❤,Aha! It looks to feel so good when you're touching yourself.❤ Keep stroking with your body pressed against the bars; so no one will find out.❤ Keep stroking while using my cleavage as your fap material.❤
+揺れてるおっぱいエロいもんね～❤\n一回倒したサキュバスだけど、\n本当はあのときもこうやって気持ちいいのに負けたかったんだよね～❤,My bouncing breasts look really sexy; right? You already defeated me; but you actually wanted lose and feel amazing like this back then; right?
+その距離だと、わたしのいい匂いがするでしょ？\nサキュバスの体って牢屋にいても汚れないから、\nずぅーっと甘くていい匂いがするんだよ❤,At this distance; you can smell me; right? Even if we're locked inside a prison; we succubi will always smell sweet and good.❤
+おっぱい揺らして谷間から甘い匂いを飛ばしてあげる❤\n鼻をスンスンしながらシコシコしようね～❤\nきゃはは❤,Let me shake my boobs; so more of my scent spreads towards you.❤ Please take deep sniffs while you stroke yourself.❤ Kyahaha.❤
+あう、あああっ・・・❤❤,Ah.❤ Aaaaah...❤
+あはは❤しごくのすっごく早くなっちゃうね❤\nサキュバスフェロモンで肺をいっぱいにしながら、\nおちんちんシコシコシコシコ❤,Ahahaha.❤ Your strokes are getting really fast.❤ Keep stroking your dick while filling your lungs with my succubus pheromones.❤
+もうイっちゃいそう？\nいいよ❤早くこの谷間に濃ゆーい精液ちょうだぁい❤\nめんどくさい看守が戻ってくる前に、出して、出して❤,Are you already about to cum? It's okay.❤ Please hurry and give your thick semen on my cleavage.❤ Shoot it on me before that bothersome jailor comes back. Give it to me.❤
+サキュバスにエナジーお貢ぎ❤\nお腹空いてる女の子を助けてぇ❤\nほらカウントダウンしてあげる❤３、２、１、ぜーろ❤❤,Offer your energy to a succubus.❤ Help out a starving poor girl.❤ I'll make a countdown for you.❤ Three... Two... One... Zero.❤❤❤
+あはぁん、おいしい～❤\nずーっとエナジーもらえてなかったから、\n最高の味がする～♪,Aaah～❤ It's so delicious.❤ It tastes so sweet after not getting to eat any for so long♪
+キミからもっともっと精液吸いたいな～❤\nねぇー、キミが干からびちゃうまで吸ってもいい？\nおねがぁい❤,I'd like to have more semen from you.❤ Hey; can I keep draining you until you're dry? Pretty please.❤
+（うう、うう・・・❤僕はなにをしているんだろう・・・❤\nでも、もう一回吸ってほしい・・・❤きもちよくてぇ・・・❤）,(Uuuh...❤ Just what am I doing...❤ But I want her to drain me again...❤ It felt so good...❤)
+（あは、またシコリ出した❤ほんとちょろ～い❤\nこのまま吸い殺しちゃってもいいし、\n死ぬ寸前で止めて奴隷にするのもいいな～❤ん？）,(Ahaha.❤ He started stroking off again.❤ He's so easy.❤ Maybe I'll drain him to death... Or I could also stop when he's on the brink of dying and turn him into my slave.❤ Hmm?)
+ちぇ、またあいつの足音だ。\nざんねんだけど、今日はこれでおしまいだね～❤,Tch. Those are the jailer's footsteps. Too bad; but we need to stop here today.❤
+あう、ううう・・・❤,Uuuuh...❤
+また別の休憩時間に来てよ。\nそのときはもう一回シコシコさせてあげる❤,You can come see me when she's on a break again. Then; I'll let you stroke off to my cleavage once more.❤
+わたしのおっぱいオカズにしたいでしょ？\nかわいそうなサキュバスに、たくさんご飯をめぐんであげようね❤\n正義のマスターくん❤くすくす❤,You want to use my boobs as fap material again; right? Please feed this cute and poor succubus lots of food; Mr. Righteous Cardmaster.❤ Ehehehe.❤
+あは、早くわたしでシコシコしたいよねぇ❤\nでも残念、邪魔なやつがいるから今はできないんだぁ❤,Ahaha. You want to stroke off to me really badly; right? But too bad; the nuisance is here right now; so you can't do it.❤
+キミは困ってる女の子を助けてるだけの正義のマスターなのにね、\nそれを邪魔をするなんて、看守のヤツメは悪いマスターだよね❤,That Natsume is such a bad cardmaster since she's getting in the way when you're a righteous cardmaster trying to help out a poor girl in trouble.❤
+あ～あ～、あいつを誰か倒してくれないかな～❤\nそうしたらキミは今すぐシコシコできるのに❤,Couldn't someone take her out?❤ If that were to happen; you could stroke off even now.❤
+わたしのおっぱい見ながらいっぱいシコシコ❤シコシコシコ❤\n気持ちいいだろうな～❤くすくす❤,I'm sure it would feel so good if you could stroke off while staring at my boobs.❤ Ehehe.❤
+(ま、今すぐ脱出しなくても、\nいずれこの街はぐちゃぐちゃになっちゃうんだけどね。\nそのときこのマスターくんも吸い殺しちゃおうっと♪),(Well; even if I can't get free right now; it's only a matter of time before the chaos engulfs this city. I'm going to drain this cardmaster to death then♪)
+あは。また来てくれたんだ～❤\nわたしがお腹を空かせてるかもって気にしてくれたの？\nやさしい～❤さっすが正義のマスターくん❤,Aha! You're here again.❤ Were you worried that I might be going hungry? That's so gentle of you.❤ As expected of Mr. Righteous Cardmaster.❤
+おちんちんからエナジー出しやすいように、\n今日もお手伝いしてあげるね～❤\nチラ❤,I'll help you shoot out your delicious energy again.❤ *Pull*
+こんな風においしい精液いっぱいもらえるなら、\n別に牢屋から出なくてもいいかもねー。\n何もしなくてもごちそうがもらえるんだもん❤,Life in the prison might actually not be so bad if I can regularly get such delicious semen from you. I'm getting fed without doing anything.❤
+優しくてバカなマスターくんが、\nいっぱい力の溶けた精液をせっせと貢ぎに来てくれるなんて❤\nあぁーん、わたしって超ラッキーかも❤,To think that I have such a gentle and stupid cardmaster who's diligently offering his semen with his power to me...❤ I'm such a lucky girl.❤
+カードを１枚も使わずに、\nこうやっておっぱい揺らしてあげるだけで、エナジー食べ放題❤\nほらほらぁ、フェロモンすんすんしてシコっていいよ～❤,I don't even need to use a single card; I just need to shake my boobs like this I'll get all the energy I can eat.❤ Hey; take deep sniffs of my pheromones while you're storking yourself.❤
+あはは❤しごくのすっごく早くなっちゃうね❤\n甘ぁい匂いで脳をまっしろにされながら、\nおちんちんをシコシコシコ❤シコシコシコ❤,Ahaha.❤ Your strokes are getting insanely fast.❤ Let your brain go pure white with my sweet scent; and stroke yourself.❤ Stroke yourself hard and fast.❤
+頭おかしくなるぐらい気持ちよくて～、\nここが牢屋だとか、相手がサキュバスだとか何も考えられない❤\n精液出したくてそれで頭がいっぱい❤,It feels so good that you're going crazy. You're completely forgetting how you're in the prison and how you're with a succubus.❤ Your thoughts are taken over by your need to cum.❤
+もうイっちゃいそうなんでしょ❤いいよ❤\nこの谷間に濃ゆーい精液ちょうだぁい❤\nめんどくさい看守が戻ってくる前に、出して、出して❤,You're already at your limit; right? It's okay. Give your thick semen on my cleavage.❤ Shoot it on me before that bothersome jailor comes back. Give it to me.❤
+サキュバスにエナジーお貢ぎしようね❤\nほらカウントダウン❤３、２、１、ぜーろ❤❤\nイケ❤出せ❤きゃはは❤,Offer your energy to a succubus.❤ I'll make a countdown for you.❤ Three... Two... One... Zero.❤❤❤ Cum.❤ Shoot it out.❤ Kyahaha.❤
+あはぁん、おいしい～❤\n力がどろどろに溶けてて、すごくいい味❤,Aaaah～❤ It's so delicious.❤ Your semen tastes so sweet with all the energy filling it.❤
+あうぅ、はへぇ・・・・❤❤,Aaah...❤ Aaaah...❤
+くすくす❤ふにゃふにゃにとろけた顔してる❤\nもうちょっとシャキッとしないと、看守にバレちゃうよ❤,Ehehe.❤ You're making such a sloppy face.❤ You need to look a bit more serious; or the jailor will find out what you were doing.❤
+それじゃまたね。あいつがすぐ戻ってくるし。\n今日はここまで。別の休憩時間に来たら、\nそのときはもう一回シコシコさせてあげる❤,We should stop here. It won't be long before she comes back now; but you can come see me when she's on another break; and I'll let you stroke off to me again.❤
+サキュバスの体って何回オナニーしても飽きないでしょ？\nかわいそうなサキュバスに、たくさんご飯をめぐんであげようね❤\n正義のマスターくん❤くすくす❤,You won't get bored of masturbating to a succubus no matter how many times you do it; right? Please keep offering this cute and poor succubus lots of food, Mr. Righteous Cardmaster.❤ Ehehe.❤
 うう、犯罪なんてするんじゃなかったぜ。\n冷たい牢屋でまずい飯を食わされて、\n生きた心地がしねえ。,
 街によっては囚人が幅を利かせて、\n好き放題やってるような牢屋もあるらしいが、\nここはヤツメがビシっと見張ってるから誰も逆らえねえ。,
 糸で縛られて罰を与えられたり、\n従順な囚人にはご褒美とやらが与えられて、\nみんなあいつの言いなりになっちまう。,
